--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -32,6 +32,9 @@
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="zom-mr-iqB"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="xdz-Lo-PiV"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Kkg-yA-PYj" id="MYe-oH-Nbf"/>
+                                </connections>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2PN-7c-eaf" userLabel="Back Arrow Button">
                                 <rect key="frame" x="0.0" y="68" width="44" height="44"/>
@@ -49,6 +52,9 @@
                                 <rect key="frame" x="181.5" y="774" width="51" height="50"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="DownloadIcon"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="Kkg-yA-PYj" eventType="touchUpInside" id="Xnm-y1-M26"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ekv-KR-OpJ"/>
